--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
-app1.url=localhost:8080/empl
+app1.url=localhost:8080/emplo
 feign.client.url=http://localhost:8081/employee-client/feign
 rest.template.url=http://localhost:8081/employee-client/rest-template
